Correct `JsonIgnoreProperties`